Fixed header being stuck to the left in MoviesView.css

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -8,7 +8,7 @@
 }
 
 .title {
-    color:rgb(5,20,49);
+    color:#fff;
     padding:30px;
     font-size:50px;
     font-weight:700;
