--- a/src/views/MoviesView.css
+++ b/src/views/MoviesView.css
@@ -1,3 +1,7 @@
+.header {
+    width:100vw;
+}
+
 .movies-view-container {
     display: flex;
     flex-direction: column;
